<resources>
    <string name="facebook_app_id">789940354469829</string>
    <string name="app_name">AthleteApp</string>
    <string name="exsercises_string">Exercises</string>
    <string name="min_string">MIN</string>
    <string name="next_upcase_str">NEXT</string>
    <string name="type_number_str">Type your phone number</string>
    <string name="type_code_str">Type your code</string>
    <string name="code_str">Code</string>
    <string name="send_code_after_str">"Send code again after "</string>
    <string name="lost_connection_str">Lost internet connection</string>
    <string name="empty_field_str">Field can`t be empty</string>
    <string name="error_try_str">Error, please, try again</string>
    <string name="send_again_str">Send again</string>
    <string name="wait_str">Please, wait...</string>
    <string name="type_your_text_here_string">Type something</string>
    <string name="delete_str">Delete</string>
    <string name="storage_permission_denied">Permission denied</string>
    <string name="enable_background_audio">Enable back audio</string>
    <string name="off">Off</string>
    <string name="video">Video</string>
    <string name="retry">Retry</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="first_name_str">First name</string>
    <string name="last_name_str">Last name</string>
    <string name="hometown_str">Description</string>
    <string name="all_string">Notifications</string>
    <string name="version_string">Version</string>
    <string name="app_version_string">1.0</string>
    <string name="licenses_string">Open source licenses</string>
    <string name="about_string">About</string>
    <string name="cont_upcase_str">CONTINUE</string>
    <string name="cancel_upcase_str">CANCEL</string>
    <string name="reg_alert_str">Для продолжения необходимо зарегистрироваться.</string>
    <string name="title_str">GetFit</string>
    <string name="from_camera_string">From camera</string>
    <string name="from_gallery_string">From gallery</string>
    <string name="invent_str">Есть ли у вас дома спортивный инвентарь (какой)?</string>
    <string name="dost_inv_str">Есть ли у вас доступ к спортивному инвентарю?</string>
    <string name="not_selected_str">Не выбрано</string>
    <string name="program_str">Program</string>
    <string name="aim_str">Какую цель вы ставите перед собой? (выбор из списка)</string>
    <string name="profile_str">Profile</string>
    <string name="get_personal_training">GET PERSONAL TRAINING</string>
    <string name="follow">FOLLOW</string>
    <string name="program">Program</string>
    <string name="post">Post</string>
    <string name="day_count">Сколько дней в неделю вы можете уделять тренировкам?</string>
    <string name="exercise_done">EXERCISE DONE</string>
    <string name="log_out">Log out</string>
    <string name="apply">APPLY</string>
    <string name="store">Store</string>
    <string name="unlock">UNLOCK</string>
    <string name="cancel">CANCEL</string>
    <string name="mark">Ваша оценка:</string>
    <string name="mark_it">ОЦЕНИТЬ</string>
    <string name="welcome_to_getfit_nsign_up_or_sign_in">Welcome to GetFit!\nSign up or sign in</string>
    <string name="choose_date">CHOOSE DATE</string>
    <string name="select">SELECT</string>
    <string name="first_name">First name</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="choose_training">Choose training</string>
    <string name="not_logged_drawer_str">You not logged in.</string>
    <string name="error_code_str">Error.</string>
    <string name="ok_str">OK</string>
    <string name="no_trainings_code_str">No trainings this day</string>
    <string name="notifications_str">Notifications</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="image_str">Image</string>
    <string name="select_str">Select</string>
    <string name="free_str">Free</string>
    <string name="paid_str">Paid</string>
    <string name="all_str">All</string>
    <string name="load_image_error">Error while loading image. Please, try again.</string>
    <string name="statistics_upcase_str">STATISTICS</string>
    <string name="programs_upcase_str">PROGRAMS</string>
    <string name="rating_error_str">Вы можете выставлять рейтинг только тренерам, что дальше.</string>
    <string name="messages_error_str">Вы можете писать только тренерам, у которых вы приобрели персональные тренировки.</string>
    <string name="news_upcase_str">NEWS</string>
    <string name="coaches_upcase_str">COACHES</string>
    <string name="doctors_upcase_str">DOCTORS</string>
    <string name="nutr_upcase_str">NUTRITIONISTS</string>
    <string name="program_rate_error_str">Вы можете выставлять рейтинг только тренерам, что дальше.</string>
    <string name="add_to_calendar_str">ADD TO CALENDAR</string>
    <string name="unlock_upcase_str">UNLOCK</string>
    <string name="purchase_dialog_str">Purchase program</string>
    <string name="are_you_sure_str">Are you sure?</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="beg_str">Начинающий</string>
    <string name="sporti_str">Спортивный</string>
    <string name="athlete_str">Атлет</string>
    <string name="male_str">Мужской</string>
    <string name="female_str">Женский</string>
    <string name="gym_str">Спортзал</string>
    <string name="plos_str">Work-out площадка</string>
    <string name="home_str">Могу заниматься дома</string>
    <string name="weight_loss_str">Снижение веса</string>
    <string name="weight_gain_str">Набор массы</string>
    <string name="drying_str">Сушка</string>
    <string name="stretch_str">Растяжка</string>
    <string name="stamina_str">Развитие выносливости</string>
    <string name="power_str">Развитие силы</string>
    <string name="comp_str">Комплексные тренировки</string>
    <string name="other_str">Другое</string>
    <string name="getfit_str">GetFit</string>
    <string name="select_val_str">Select Value</string>
    <string name="end_part_str">End part</string>
    <string name="workouts_str">" workouts"</string>
    <string name="programs_adapter_str">" PROGRAMS"</string>
    <string name="work_adapter_str">" workouts"</string>
    <string name="today_upcase_str">TODAY</string>
    <string name="jan_str">January</string>
    <string name="feb_str">February</string>
    <string name="march_str">March</string>
    <string name="april_str">April</string>
    <string name="may_str">May</string>
    <string name="june_str">June</string>
    <string name="july_str">July</string>
    <string name="august_str">August</string>
    <string name="sep_str">September</string>
    <string name="cot_str">October</string>
    <string name="nov_str">November</string>
    <string name="dec_str">December</string>
    <string name="done">DONE</string>
    <string name="chats">Chats</string>
    <string name="last_name">Last name</string>
    <string name="get_started">GET STARTED</string>
    <string name="type_of_training">TYPE OF TRAINING</string>
    <string name="price">PRICE</string>
    <string name="sort_by">SORT BY</string>
    <string name="date">Date</string>
    <string name="followers">Followers</string>
    <string name="rating">Rating</string>
    <string name="show_me_training_tips">SHOW ME TRAINING TIPS</string>
    <string name="my_profile">My profile</string>
    <string name="professionals">Professionals</string>
    <string name="calendar">Calendar</string>
    <string name="news">News</string>
    <string name="filled_error_str">Not all fields filled.</string>

    <integer name="com_vk_sdk_AppId">5357520</integer>
</resources>
