<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:background="@color/primary_color"
            android:minHeight="?attr/actionBarSize">
            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/action_bar"
                android:background="@color/primary_color">

                <ImageView
                    android:id="@+id/drawer_indicator"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:background="@drawable/drawer_selector"
                    android:layout_gravity="start"
                    android:src="@drawable/back_black_ic"
                    android:padding="15dp" />

                <binaryblitz.athleteapp.Custom.BoldRobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/settings"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/date_text_view"
                    android:textAllCaps="false"
                    android:gravity="center_vertical"
                    android:typeface="sans"
                    android:textSize="20sp"
                    android:textColor="@color/dark_text_color"
                    android:layout_marginLeft="60dp" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:id="@+id/imageView19"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/ok_black"
                    android:padding="15dp" />

            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">

            <android.support.v7.widget.SwitchCompat
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:text="@string/all_string"
                android:id="@+id/switch1"
                android:layout_gravity="right|top"
                android:layout_marginTop="40dp"
                android:textColor="#212121"
                android:textSize="16sp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_view_org91"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="0dp"
                android:elevation="8dp"
                android:padding="0dp"
                android:background="#ffffff"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:textColor="#212121"
                    android:textSize="16sp"
                    app:met_baseColor="#212121"
                    app:met_errorColor="#212121"
                    app:met_helperTextColor="#212121"
                    app:met_primaryColor="#212121"
                    app:met_typeface="fonts/roboto.ttf"
                    android:layout_gravity="left|bottom"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:textColorHint="#212121"
                    android:hint="@string/first_name_str"
                    android:layout_marginTop="12dp"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText41"
                    android:textColor="#212121"
                    android:textSize="16sp"
                    app:met_baseColor="#212121"
                    app:met_errorColor="#212121"
                    app:met_helperTextColor="#212121"
                    app:met_primaryColor="#212121"
                    app:met_typeface="fonts/roboto.ttf"
                    android:layout_gravity="left|bottom"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:textColorHint="#212121"
                    android:hint="@string/last_name_str"
                    android:layout_marginTop="16dp"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText43"
                    android:textColor="#212121"
                    android:textSize="16sp"
                    app:met_baseColor="#212121"
                    app:met_errorColor="#212121"
                    app:met_helperTextColor="#212121"
                    app:met_primaryColor="#212121"
                    app:met_typeface="fonts/roboto.ttf"
                    android:layout_gravity="left|bottom"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:textColorHint="#212121"
                    android:hint="@string/hometown_str"
                    android:layout_marginTop="16dp"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="12dp" />
            </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_view_org9"
                android:layout_width="fill_parent"
                android:layout_height="135dp"
                card_view:cardCornerRadius="0dp"
                android:elevation="8dp"
                android:padding="0dp"
                android:background="#ffffff"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="12dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp"
                    android:id="@+id/type_frame_org9"
                    android:background="#ffffff">

                    <binaryblitz.athleteapp.Custom.BoldRobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_string"
                        android:id="@+id/textView306_org9"
                        android:layout_gravity="center_horizontal|top"
                        android:padding="5dp"
                        android:textColor="@color/accent_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <binaryblitz.athleteapp.Custom.RobotoTextView
                        android:layout_width="fill_parent"
                        android:layout_height="32dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/licenses_string"
                        android:background="?android:selectableItemBackground"
                        android:id="@+id/textView409"
                        android:layout_gravity="left|top"
                        android:layout_marginTop="75dp"
                        android:textColor="#212121"
                        android:textSize="16sp"
                        android:gravity="center_vertical" />

                    <binaryblitz.athleteapp.Custom.RobotoTextView
                        android:layout_width="fill_parent"
                        android:layout_height="32dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/version_string"
                        android:background="?android:selectableItemBackground"
                        android:id="@+id/textView419"
                        android:layout_gravity="left|top"
                        android:textColor="#212121"
                        android:textSize="16sp"
                        android:layout_marginTop="40dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="100dp" />

                    <binaryblitz.athleteapp.Custom.RobotoTextView
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/app_version_string"
                        android:id="@+id/textView47"
                        android:layout_marginTop="40dp"
                        android:layout_gravity="right|top"
                        android:gravity="center_vertical|right"
                        android:textSize="16sp"
                        android:textColor="#0097A7" />
                </FrameLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="44dp"
        android:background="@color/accent_color"
        android:textColor="#ffffff" />
</FrameLayout>