<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView15"
        android:src="@drawable/test3"
        android:scaleType="centerCrop" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/black_gradiend">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phon2e"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:hint="@string/first_name"
            app:met_floatingLabelText="Code"
            app:met_baseColor="#ffffff"
            app:met_errorColor="#ffffff"
            app:met_floatingLabel="highlight"
            app:met_helperTextColor="#ffffff"
            app:met_primaryColor="#ffffff"
            app:met_typeface="fonts/roboto.ttf"
            android:textColorHint="#ffffff"
            android:visibility="visible"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="88dp"
            android:inputType="textPersonName" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phon2e2"
            android:textColor="#ffffff"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:hint="@string/last_name"
            app:met_floatingLabelText="Code"
            app:met_baseColor="#ffffff"
            app:met_errorColor="#ffffff"
            app:met_floatingLabel="highlight"
            app:met_helperTextColor="#ffffff"
            app:met_primaryColor="#ffffff"
            app:met_typeface="fonts/roboto.ttf"
            android:textColorHint="#ffffff"
            android:visibility="visible"
            android:layout_marginTop="144dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <binaryblitz.athleteapp.Custom.BoldRobotoTextView
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/get_started"
            android:id="@+id/textView16"
            android:gravity="center"
            android:textColor="#ffffff"
            android:background="#4e4e4e"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </FrameLayout>
</FrameLayout>